Remove String.isBlank from MainActivity.java